crates/svm-sdk-tests/tests/funding/fundable_hook_func_with_args_fails.stderr
error: `#[fundable_hook]` annotated function should have signature of `fn() -> ()`
 --> $DIR/fundable_hook_func_with_args_fails.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
